[package]
name = "arb-order-cancellation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethabi = "18.0.0"
ethers = "2.0.8"
ethers-signers = "2.0.8"
tokio = "1.29.1"
web3 = "0.19.0"
web3-unit-converter = "0.1.1"