[package]
name = "rust-v2-signing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
blake2b_simd = "1.0.2"
bytes = "1.5.0"
ed25519-dalek = "2.0.0"
ethers = "2.0.10"
generic-array = "1.0.0"
hex = "0.4.3"
reqwest = {version = "0.11.20", features = ["blocking", "json"]}
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
sha256 = "1.4.0"
sp-core = "23.0.0"
tokio = {version = "1.32.0", features = ["full"]}
web3-unit-converter = "0.1.1"
